[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phononfit"
version = "0.1.0"
description = "Small tools for spectral-energy-density peak analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Xiaohan Liu" }]
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
]

[project.scripts]
phononfit = "phononfit.cli:main"

[project.urls]
Repository = "https://github.com/liuxh97/phononfit"

[tool.setuptools.packages.find]
include = ["phononfit*"]

[tool.ruff]
line-length = 100
target-version = "py310"
